--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -879,4 +879,25 @@
     <string name="rewards_save_continue">సేవ్ చేసి కొనసాగండి</string>
     <string name="momspresso_rewards">"మామ్స్‌ప్రెస్సో రివార్ద్స్‌ "</string>
     <string name="rewards_participate">"మీ ప్రొఫైల్ పూర్తి చేసి పాల్గొనండి మరియు సంపాదించండి! "</string>
+    <string name="save_continue">సేవ్ చేసి కొనసాగండి</string>
+    <string name="rewards_personal_header">మీతో సన్నిహితంగా ఉండటానికి ఈ సమాచారం మాకు అవసరం</string>
+    <string name="rewards_welcome">మామ్స్‌ప్రెస్సో రివార్ద్స్‌కు స్వాగతం!</string>
+    <string name="rewards_description">సర్వేలు, ఇ-కామర్స్ సమీక్షలు, ప్రాయోజిత బ్లాగులు మరియు ఇతర    ప్రముఖ బ్రాండ్స్ క్రమ పద్ధతిలో ప్రచారం చేస్తుంటారు   . ఈ ప్రచారానికి మీ అర్హతను నిర్ణయించడానికి మీ నుండి కొంత సమాచారం మాకు అవసరం. ఈ ప్రచారంలో పాల్గొనడం వలన మీకు డబ్బు అందించే మామ్స్‌ప్రెస్సో రివార్డ్స్ ఉంటాయి .</string>
+    <string name="rewards_start_now">ఇప్పుడు ప్రారంబించండి</string>
+    <string name="rewards_family_header">వివిధ ప్రచారాల కోసం మీ అర్హతను గుర్తించడానికి మాకు ఈ క్రింది సమాచారం అవసరం</string>
+    <string name="rewards_social_header">మా సోషల్ మీడియా ప్రచారాలకు మిమ్మల్ని ఆహ్వానించడానికి మాకు ఈ సమాచారం అవసరం.</string>
+    <string name="rewards_number_of_kids">పిల్లల సంఖ్య</string>
+    <string name="rewards_interest">అభిరుచులు</string>
+    <string name="rewards_not_working">"నాన్ వర్కింగ్ "</string>
+    <string name="rewards_are_expecing">"గర్భవతిని  "</string>
+
+    <string name="cannot_be_left_blank">%1$s ఖాళీగా వదిలేయకండి</string>
+    <string name="please_enter_a_valid">సరైన %1$s ఇవ్వండి</string>
+    <string name="need_to_select_option">మీరు %1$s కొరకు ఒక ఆప్షన్ ఎంచుకోండి</string>
+    <string name="rewards_expected_date">డెలివరీ  తేదీ</string>
+    <string name="rewards_mobile_number_verified">మొబైల్ నంబర్ ధృవీకరించబడింది</string>
+    <string name="rewards_have_children">మీకు పిల్లలు ఉన్నారా?</string>
+    <string name="rewards_tab_detail">బహుమతులు</string>
+    <string name="rewards_add_child">పిల్లల సంఖ్య జోడించండి</string>
+    <string name="rewards_kid_detail">పిల్లల వివరాలు</string>
 </resources>
