--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -111,11 +111,13 @@
     <string name="duration_txt">వ్యవధి</string>
     <string name="cost_txt">ఖర్చు</string>
 
+
+
     <string name="event_added">ఈవెంట్ జోడించడం జరిగింది</string>
 
 
     <string name="new_yes">అవును</string>
-    <string name="new_cancel">రద్దు</string>
+    <string name="new_cancel">క్యాన్సిల్ </string>
     <string name="load_error">కంటైనర్ లోడ్ విఫలం</string>
     <string name="example_post_title_placeholder">ఆర్టికల్ టైటిల్</string>
     <string name="example_post_content_placeholder">మీ కథను ఇక్కడ షేర్ చేయండి</string>
@@ -134,7 +136,7 @@
     <string name="analytics.popup.improve_rank">నా రాంక్ ని ఎలా మెరుగుపరుచుకోవచ్చు</string>
     <string name="analytics.popup.improve_social">నా సోషల్ షేర్ ని ఎలా మెరుగుపరచుకోవచ్చు</string>
 
-    <string name="videos.dialog.title">అప్లోడ్  చేసే వీడియో ఎంచుకోండిి</string>
+    <string name="videos.dialog.title">అప్లోడ్  చేసే వీడియో ఎంచుకోండి</string>
     <string name="videos.upload_option.camera">వీడియో తీయండి</string>
     <string name="videos.upload_option.gallery">గ్యాలరీ నించి ఎంచుకోండి</string>
     <string name="videos.upload_option.cancel">క్యాన్సల్</string>
@@ -151,7 +153,7 @@
     <string name="ad.comments.fb_comment">ఫేస్ బుక్ కామెంట్</string>
     <string name="ad.comments.edit_label">మార్చు</string>
     <string name="ad.comments.save">సేవ్</string>
-    <string name="ad.comments.toast_empty_comment">దయచేసి చెల్లుబాటు అయ్యే వివరాలు ఇవ్వండి</string>
+    <string name="ad.comments.toast_empty_comment">దయచేసి చెల్లుబాతో  అయ్యే వివరాలు ఇవ్వండి</string>
     <string name="ad.comments.toolbar.title">కామెంట్లు</string>
     <string name="ad.comments.replying_to">మీరు కు జవాబు ఇస్తున్నారు %1$s</string>
     <string name="ad.bottom_bar.facebook">ఫేస్ బుక్</string>
@@ -202,7 +204,7 @@
         <item>మీ బ్లాగులను ఫేస్ బుక్, వాట్సాప్ వంటి అన్ని నెటీవర్కులలో షేర్ చేయండి</item>
     </string-array>
 
-    <string name="confirmation_dialog.delete_draft.message">మీ డ్రాఫ్ట్ ని డిలీట్ చెయ్యాలి అనుకుంటున్నారా?</string>
+    <string name="confirmation_dialog.delete_draft.message">మీ డ్రాఫ్ట్ ని డిలీట్ చెయ్యాలి అనుకుంతోన్నారా?</string>
     <string name="confirmation_dialog.no">కాదు</string>
     <string name="confirmation_dialog.yes">అవును</string>
 
@@ -577,7 +579,7 @@
     <string name="rate_now">ఇప్పుడే రేట్ చేయండి</string>
     <string name="rate_us.dialog.title">మా ఆప్ ని రేట్ చేయండి?</string>
     <string name="rate_us.dialog.not_now">ఇప్పుడు కాదు</string>
-    <string name="rate_us.dialog.message1">మామ్స్‌ప్రెస్సోయాప్ ని ఎంజాయ్ చేస్తుంటే దయచేసి రేటింగ్స్ ఇవ్వండి</string>
+    <string name="rate_us.dialog.message1">మామ్స్‌ప్రెస్సో యాప్ ని ఎంజాయ్ చేస్తుంటే దయచేసి రేటింగ్స్ ఇవ్వండి</string>
     <string name="rate_us.dialog.message2">మీ మద్దతు కోసం ధన్యవాదాలు</string>
 
     <string name="suggested_topic.start_writing">రాయటం మొదలుపెట్టండి</string>
