--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -315,7 +315,7 @@
 
     <string name="lang_specific.toolbar.title">భాషలు</string>
 
-    <string name="lang_setting.stories_label">Stories</string>
+    <string name="lang_setting.stories_label">కథలు</string>
 
     <string name="search.article_label">కథనం</string>
     <string name="search.author_label">రచయిత</string>
@@ -443,19 +443,19 @@
     <string name="ranking.tabs_page_views_label">మీ పేజీ వ్యూలు</string>
     <string name="ranking.views_label">బ్లాగ్ పేజీ వ్యూలు</string>
     <string name="ranking.menu_30_days_label">30 రోజుల వ్యూ</string>
-    <string name="ranking.menu_custom_label">CUSTOM</string>
-    <string name="ranking.improve_views_label">How can I improve my Page views?</string>
-    <string name="ranking.improve_social_share">How can I improve my Social Share?</string>
+    <string name="ranking.menu_custom_label">కస్టమ్</string>
+    <string name="ranking.improve_views_label">నా పేజీ వ్యూ లను ఎలా మెరుగుపరచవచ్చు?</string>
+    <string name="ranking.improve_social_share">నా సోషల్ షేర్ ని ఎలా మెరుగుపరచుకోవచ్చు?</string>
     <string name="ranking.page_views_label">PAGE VIEWS: </string>
-    <string name="ranking.engagement">ENGAGEMENTS</string>
-    <string name="ranking.stats_like">LIKES</string>
-    <string name="ranking.stats_shares">SHARES</string>
+    <string name="ranking.engagement">ఎంగేజ్మెంట్స్ </string>
+    <string name="ranking.stats_like">లైక్ లు</string>
+    <string name="ranking.stats_shares">షేర్లు</string>
     <string name="ranking.stats_comments">కామెంట్లు</string>
-    <string name="ranking.how_calculated">How is this calculated?</string>
-    <string name="ranking.top_bloggers">TOP BLOGGERS IN</string>
+    <string name="ranking.how_calculated">దీనిని ఎలా లెక్కిస్తారు?</string>
+    <string name="ranking.top_bloggers">Tఅత్యుత్తమ బ్లాగర్లు</string>
     <string name="ranking.followers_label">ఫాలోవర్లు</string>
     <string name="ranking.in">ఇన్</string>
-    <string name="ranking.toast_start_end_date">Start date must be less than end date</string>
+    <string name="ranking.toast_start_end_date">మొదలు పెట్టిన డేట్ ఆఖరి రోజు కంటే తక్కువ ఉండాలి</string>
 
     <string name="editor.publish">ప్రచురణ</string>
 
@@ -493,7 +493,7 @@
     <string name="upload_video.desc1">వీడియో షూట్ చేసి వెంటనే మీ మొబైల్ యాప్ నుండి  అప్లోడ్ చేయండి</string>
     <string name="upload_video.get_started">మొదలుపెట్టండి</string>
 
-    <string name="moderation_or_share.way_to_go">WAY TO GO!</string>
+    <string name="moderation_or_share.way_to_go">ఆరంభించండి !</string>
     <string name="moderation_or_share.moderation_message">మీ ఆర్టికల్ మోడరేషన్ లో ఉంది. 24 గంటల లోగా మీకు మీ బ్లాగ్ స్టేటస్ గురించి ఇమెయిల్ వస్తుంది</string>
     <string name="moderation_or_share.publish_message">శుభాకాంక్షలు మీ బ్లాగ్ ప్రచురించబడింది. మీ కుంటుంబ సభ్యులతో మరియు మిత్రులతో షేర్ చేయండి</string>
     <string name="moderation_or_share.later">తర్వాత</string>
@@ -522,7 +522,7 @@
 
     <string name="video_progress.uploading_label">అప్లోడ్ అవుతోంది ...</string>
     <string name="video_progress.uploading_msg">ఆప్ ని మధ్యలో మూసివేయకండి, అప్లోడ్ ని అది సొంతంగా ఆపివేస్తుంది. అప్లోడ్ చేయడానికి ఆప్ ఉపయోగించండి.</string>
-    <string name="video_progress.way_to_go">WAY TO GO!</string>
+    <string name="video_progress.way_to_go">ఆరంభించండి !</string>
     <string name="video_progress.success_msg">వీడియో విజయవంతంగా అప్లోడ్ అయ్యి మోడరేషన్ కు పంపటం జరిగింది. మోడరేషన్ అయ్యాక మీకు తెలియజేస్తాము</string>
     <string name="video_progress.okay">ఓకే</string>
     <string name="video_progress.uploading_failed">అప్లోడ్ విఫలమైనది</string>
@@ -628,11 +628,11 @@
 
     <string name="all_categories_label">అన్ని</string>
 
-    <string name="language_label.english">English</string>
-    <string name="language_label.hindi">हिंदी</string>
-    <string name="language_label.marathi">मराठी</string>
+    <string name="language_label.english">ఆంగ్లం</string>
+    <string name="language_label.hindi">హిందీ</string>
+    <string name="language_label.marathi">మరాఠీ</string>
     <string name="language_label.bengali">বাংলা</string>
-    <string name="language_label.tamil">தமிழ்</string>
+    <string name="language_label.tamil">తమిళ్</string>
     <string name="language_label.telegu">తెలుగు</string>
     <string name="language_label.kannada">ಕನ್ನಡ</string>
     <string name="language_label.malayalam">മലയാളം</string>
@@ -849,11 +849,11 @@
     <string name="use_picture_word_to_write_one">Use The Picture ,Word, Phrase Or video Given Blow To Write One</string>
     <string name="challenge_write_story_for_this_picture">Write Your Story Around This Picture</string>
     <string name="choose_challenge_label">TAKE THE CHALLENGE</string>
-    <string name="start_writing">Start Writing</string>
+    <string name="start_writing">రాయటం మొదలుపెట్టండి</string>
 
-    <string name="male">Male</string>
-    <string name="female">Female</string>
-    <string name="DOB">Date Of Birth</string>
+    <string name="male">పురుషుడు</string>
+    <string name="female">స్త్రీ</string>
+    <string name="DOB">పుట్టిన తేదీ</string>
     <string name="add">జోడించు</string>
 
 
