bottom sheet added

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1057,4 +1057,7 @@
     <string name="rewards_add_child">Add Child</string>
     <string name="rewards_kid_detail">Kid detail</string>
     <string name="app_name">Momspresso</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
