--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -902,4 +902,6 @@
     <string name="rewards_tab_detail">బహుమతులు</string>
     <string name="rewards_add_child">పిల్లల సంఖ్య జోడించండి</string>
     <string name="rewards_kid_detail">పిల్లల వివరాలు</string>
+    <string name="rewards_participating_earn_completing_profile">మీ ప్రొఫైల్ పూర్తి చేసి పాల్గొనండి మరియు సంపాదించండి!</string>
+    <string name="rewards_momspresso">మామ్స్‌ప్రెస్సో రివార్ద్స్‌</string>
 </resources>
