--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1060,4 +1060,11 @@
     <string name="rewards_add_child">Add Child</string>
     <string name="rewards_kid_detail">Kid detail</string>
     <string name="app_name">Momspresso</string>
+    <string name="rewards_momspresso">Momspresso Rewards</string>
+    <string name="rewards_participating_earn_completing_profile">Participate and earn now by completing your profile!</string>
+
+
+    //new Video Challenge Ui Strings
+    <string name="video_challenge_live_text">LIVE</string>
+    <string name="video_challenge_text">CHALLENGES</string>
 </resources>
