--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -952,4 +952,11 @@
     <string name="rewards_kid_detail">കുട്ടിയെ കുറിച്ച്</string>
     <string name="rewards_participating_earn_completing_profile"> പ്രൊഫൈൽ പൂരിപ്പിക്കൂ, ഇതിൽ പങ്ക് ചേരൂ, സമ്പാദിക്കാൻ തുടങ്ങൂ!</string>
     <string name="rewards_momspresso">മോംസ്പ്രേസ്സോ റീവാർഡുകൾ</string>
+
+
+
+    //new Video Challenge Ui Strings
+    <string name="video_challenge_live_text">LIVE</string>
+    <string name="video_challenge_text">CHALLENGES</string>
+    <string name="choose_video_categories_text">CATEGORIES</string>
 </resources>
