challenge issues, new video challenge on release date

--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -266,7 +266,7 @@
     </string-array>
 
     <string name="onboarding.desc_1">ஒவ்வொரு அம்மாவுக்கும் ஒரு கதை உண்டு. உங்களுடையது என்ன? அதை உரை அல்லது வீடியோவில் பகிர்ந்து கொள்ளுங்கள்</string>
-    <string name="onboarding.desc_2">ஆங்கிலம், ஹிந்தி, பங்களா, மராத்தி, தமிழ், தெலுங்கு ஆகியவையில் இருந்து தேர்வு செய்யவும்.</string>
+    <string name="onboarding.desc_2">ஆங்கிலம், ஹிந்தி, வங்காளம், மராத்தி, தமிழ், தெலுங்கு, கன்னடம் மற்றும் மலையாளம் மொழியிலிருந்து தேர்வு செய்யவும்.</string>
     <string name="onboarding.desc_3">மாம்ஸ்ப்ரெஸ்ஸோ டீவி உங்களுக்கு அழகான, ஊக்கமளிக்கும், பயனுள்ள மற்றும் வேடிக்கையான வீடியோக்களை வழங்குகிறது. எல்லாம் ஒரே இடத்தில்.</string>
     <string name="onboarding.desc_4">எங்கள் அன்னையர் சமூகத்தின் சக்தியில் சேரவும். உங்கள் கேள்விகளைப் பகிர்ந்து கொள்ளவும். மற்றவர்களுக்கு உதவவும்</string>
 
