--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -264,7 +264,7 @@
     </string-array>
 
     <string name="onboarding.desc_1">ప్రతీ అమ్మకి ఒక కథ ఉంటుంది . మీ కథ ఏమిటి ?   టెక్స్ట్ లేదా వీడియో రూపంలో షేర్ చేయండి.</string>
-    <string name="onboarding.desc_2">ఇంగ్లిష్ ,హిందీ ,బంగ్లా ,మరాఠీ ,తమిళ్ ,తెలుగు లలో ఎంచుకోండి .</string>
+    <string name="onboarding.desc_2">ఇంగ్లీష్ , హిందీ , బంగ్లా , మరాఠీ ,తమిళ్ , తెలుగు ,కన్నడ మరియు మళయాళంలలో భాషను ఎంచుకోండి .</string>
     <string name="onboarding.desc_3">మామ్స్‌ప్రెస్సో టీవీ మీకోసం అందమైన , ఉపయోగకరమైన , హాస్యమైన మరియు ప్రేరణ కలిగించే వీడియోస్  అందిస్తుంది  .అన్నీ ఒక దగ్గరే !</string>
     <string name="onboarding.desc_4">మామ్స్ కమ్యూనిటీని మరింత శక్తివంతం చేయండి .మీ సందేహాలు అడగండి మరియు మిగతావారికి సహాయపడండి !</string>
 
