--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -268,7 +268,7 @@
     </string-array>
 
     <string name="onboarding.desc_1">ಪ್ರತಿ ತಾಯಿಯ ಒಂದು ಕಥೆ ಇದೆ. ನಿಮ್ಮದೇನು? ಇದನ್ನು ಪಠ್ಯ ಅಥವಾ ವೀಡಿಯೊದಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಿ.</string>
-    <string name="onboarding.desc_2">ಇಂಗ್ಲೀಷ್, ಹಿಂದಿ, ಬಾಂಗ್ಲಾ, ಮರಾಠಿ, ತಮಿಳು, ತೆಲುಗು, ಮಲಯಾಳಂ, ಕನ್ನಡದಿಂದ ಆಯ್ಕೆ ಮಾಡಿ,  ಮತ್ತು .</string>
+    <string name="onboarding.desc_2">ಇಂಗ್ಲಿಷ್, ಹಿಂದಿ, ಬಾಂಗ್ಲಾ, ಮರಾಠಿ, ತಮಿಳು, ತೆಲುಗು, ಕನ್ನಡ ಮತ್ತು ಮಲಯಾಳಂ ಭಾಷೆಗಳಿಂದ ಆರಿಸಿ.</string>
     <string name="onboarding.desc_3">ಮೊಮ್ಮೆಸ್ಪ್ರೆಸೊ ಟಿವಿ ನಿಮಗೆ ಸುಂದರ, ಸ್ಪೂರ್ತಿದಾಯಕ, ಉಪಯುಕ್ತ, ಮತ್ತು ಮೋಜಿನ ವೀಡಿಯೊಗಳನ್ನು ತರುತ್ತದೆ. ಒಂದೇ ಸ್ಥಳದಲ್ಲಿ!</string>
     <string name="onboarding.desc_4">ನಮ್ಮ ತಾಯಿ ಸಮುದಾಯದ ಶಕ್ತಿಯನ್ನು ಸಜ್ಜುಗೊಳಿಸಿ. ನಿಮ್ಮ ಪ್ರಶ್ನೆಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಿ ಮತ್ತು ಇತರರಿಗೆ ಸಹಾಯ ಮಾಡಿ</string>
 
