--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -935,6 +935,11 @@
 
     //tooltip groups
     <string name="add_text_or_media_group_post_activity_tooltip_text">TRY AUDIO POST</string>
+    <string name="dialog_header_choose_sort_type">विकल्प चुनें</string>
+    <string name="rewards_instagram_handler">इंस्टाग्राम का लिंक डालें</string>
+    <string name="rewards_facebook_handler">फेसबुक का लिंक एड करें</string>
+    <string name="add_youtube">यूट्यूब चैनल का लिंक जोड़ें</string>
+    <string name="add_twitter">ट्विटर हैंडल डालें</string>
 
 
 </resources>
