--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -922,4 +922,9 @@
 
     //tooltip groups
     <string name="add_text_or_media_group_post_activity_tooltip_text">TRY AUDIO POST</string>
+    <string name="dialog_header_choose_sort_type">"क्रमवारी लावा "</string>
+    <string name="rewards_instagram_handler">Instagram हँडल जोडा</string>
+    <string name="rewards_facebook_handler">फेसबुक कनेक्ट करा</string>
+    <string name="add_youtube">YouTube चॅनेल दुवा जोडा</string>
+    <string name="add_twitter">ट्विटर हँडल जोडा</string>
 </resources>
