rewards string changed

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1036,7 +1036,9 @@
     <string name="rewards_participate">Participate and earn now by completing your profile!</string>
     <string name="rewards_personal_header">We need this information to get in touch with you</string>
     <string name="rewards_welcome">Welcome to Momspresso Rewards!</string>
-    <string name="rewards_description">Leading brands host campaigns in the form of surveys, e-commerce reviews, sponsored blogs and others on a regular basis. We need some information from you to determine your eligibility for these campaigns. Participation in these campaigns involves a monetary benefit and hence Momspresso Rewards.</string>
+    <string name="rewards_description">Leading brands host campaigns in the form of surveys, e-commerce reviews, sponsored blogs and others on a regular basis.
+       </string>
+    <string name="reards.description_secand_text"> We need some information from you to determine your eligibility for these campaigns. Participation in these campaigns involves a monetary benefit and hence Momspresso Rewards.</string>
     <string name="rewards_start_now">START NOW</string>
     <string name="rewards_family_header">We need this information below to determine your eligibility for various campaigns</string>
     <string name="rewards_social_header">We need this information to invite you to our social media campaigns.</string>
